fixed issue that broke modals on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -76,7 +76,7 @@ label {
   /* //max-inline-size: 60ch; */
   border: 3px solid #ffff00;
   max-height: 100% !important;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 
 /* * MODAL / Intake Form CSS END */
